# PkmnJakt

./: .gitignore  Deployment Ubuntu.md  Deployment.md  apply_types_migration.py  endpoints.md
Database/: base.db  base.sqbpro
Datamodel/: add_pokemon_types.sql  create.py  def.sql  def.sqlite  generate_catch_codes.py  populate_pokemon_types.py  rebuild.sh  settings_data.sql
Pkmn/: catch_codes.csv  catch_codes_base_locked.csv  generate_catch_codes.py  make_qr_codes.py  pkmn.csv  pokemon_types.csv  pull_images.py  rescale_images.py  sync_pokemon_db_with_defintions.py  to_jpg.py
Testing/: login-codes.py
pkmn_api/: Cargo.toml  LOGGING.md  STATISTICS_ENDPOINTS.md  run-dev.sh  run.sh  test-api-calls.sh  test_calls.py  test_milestones.py
pkmn_api/dev-certs/: localhost+2-key.pem  localhost+2.pem  make-cert.sh
pkmn_api/src/: api.rs  databaseconnection.rs  main.rs  milestones.rs  misc.rs  model.rs
pkmn_gui/: README.md  pubspec.yaml  push_template.sh  push_to_test.sh  run-dev.sh  run-release-nginx.sh
pkmn_gui/dev-cert/: localhost-key.pem  localhost.pem
pkmn_gui/lib/: api_calls.dart  constants.dart  main.dart  main_page.dart
pkmn_gui/lib/models/: milestone.dart  milestone.g.dart
pkmn_gui/lib/screens/: admin_pokemon_found_screen.dart  admin_screen.dart  backend_unavailable_screen.dart  comprehensive_milestone_screen.dart  found_pokemon_scanner_screen.dart  game_statistics_screen.dart  high_score_screen.dart  highscore_page.dart  highscore_screen.dart  login_scanner_screen.dart  main_screen.dart  manual_login_screen.dart  milestone_screen.dart  pokedex_screen.dart  pokemon_found_screen.dart  profile_screen.dart  qr_scanner_screen.dart  user_detail_screen.dart  user_statistics_screen.dart  welcome_screen.dart
pkmn_gui/test/: widget_test.dart
pkmn_gui/web/: index.html  loading.css  loading.js  manifest.json  version.json
(+23 files in other folders)
