[package]
name = "pkmn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["sqlite", "chrono", "serde_json"] }
dotenv = "0.15.0"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
