[package]
name = "pkmn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
diesel = { version = "2.2.7", features = ["sqlite", "chrono", "serde_json"] }
dotenv = "0.15.0"
rand = "0.9.0"
rusqlite = { version = "0.33.0", features = ["chrono"] }
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
