[package]
name = "pkmn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["openssl"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
clap = { version = "4.0", features = ["derive"] }
diesel = { version = "2.2.7", features = ["sqlite", "chrono", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"
openssl = "0.10.71"
rand = "0.9.0"
rusqlite = { version = "0.33.0", features = ["chrono"] }
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
